--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of our first initial thoughts when trying to solve this problem was doing Monte Carlo simulations. Due to the complexity and unpredictability of Mahjong, it seemed logical to throw a model at it and have it learn through trial and error. However, as we began implementing, we realized two main issues through this process."
+    "One of our first initial thoughts when trying to solve this problem was doing Monte Carlo simulations. Due to the complexity and unpredictability of Mahjong, it seemed logical to create a model and have it learn through trial and error given thousands of simulations. However, as we began implementing, we realized two main issues through this process."
    ]
   },
   {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
