Wrote Sam's Results section

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -526,6 +526,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subsection 4: Experimental Modifications\n",
+    "Despite the risk of increasing the runtime of the model, we attempted to pass the entire observable state space into the neural network. This required finding a way to represent the state space so that it could be passed into a neural network, meaning we needed a fixed-length representation. We also wanted it to be permutation-invariant: if the model cared about how tiles were arranged in its hand or the order in which tiles were discarded, the state space would be impossibly large.  \n",
+    "  \n",
+    "Our solution was a matrix. Each column of the matrix represented a single type of tile (such as the 9 of circles) and each row represented a state which a tile could be in: one for 'free' tiles in the player's hand; one for tiles in the player's hand that are locked into melds; one for tiles which are unavailable to the player (either in a discard pile or locked into another player's meld); and one for tiles which have not been seen. The value of each matrix entry would correspond to the number of tiles of that type in that state. This matrix could be passed directly into a neural network, though it did have a very large state space - probably larger than we had the computational resources to handle.  \n",
+    "  \n",
+    "Unfortunately, we were unable to get this state space representation working in time to use it for anything. The mechanics of moving tiles from one state to another did not work as intended, and we were unable to determine the reason for that error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While performing these modifications, we also identified some issues with our implementation of the turn order rules. Efforts were made to resolve these issues as well, but unfortunately these too were abandoned due to time constraints."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -618,7 +637,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -632,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
