Wrote Interpretation of Results for Global Reward Prediction (both parts)

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -593,6 +593,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The results of our global reward prediction model initially show that we were providing the model with insufficient information: it was unable to learn which tile to discard because we didn't tell it what tiles it had. The results of our further experiments with global reward prediction mainly served to show that we were being overly ambitious. Our efforts to create a state space representation that the model could use properly met with failure, and would have yielded an excessively large state space even if they had succeeded - and this despite efforts to reduce the size of the total state space. Moreover, we found that our implementation of punging and chiing was also lacking. In the end, we abandoned both of these to train a model [insert description of MonteCarlo.py here]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Limitations\n",
     "Our biggest issue was planning and coordination. We tried to do too much, and jumped ahead too fast, which resulted in different teams working on separate implementations of the same thing - for example, we had at least three different state representations and at least two different neural networks, and created a new file every time we wanted to test one of them. This also resulted in us having difficulty implementing textbook Monte Carlo algorithms, which should not have been nearly as difficult as they were, and wouldn't have been if we'd had multiple pairs of eyes looking at them from the start.  \n",
     "  \n",
@@ -619,6 +626,11 @@
    "source": [
     "### Conclusion"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
