Updated ethics section

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -617,7 +617,7 @@
     "\n",
     "### Ethics & Privacy\n",
     "\n",
-    "There are two potential ethical concerns with this project. One is that if it works well enough, it could be used to cheat in high-stakes games; the other is that someone could find a way of using part of our code to do something different. Neither of these are particularly concerning - people put a lot of effort into preventing people from cheating in high-stakes gambling, and the program we’re trying to make is similar enough to other existing programs that we’re unlikely to find anything particularly new that isn’t specific to this kind of game. If we were planning on deploying it (commercially or for free), we’d also have to worry about ensuring equal access for anyone who wants it.\n"
+    "There are two potential ethical concerns with this project. One is that if it works well enough, it could be used to cheat in high-stakes games; the other is that someone could find a way of using part of our code to do something different. If we were planning on deploying it (commercially or for free), we’d also have to worry about ensuring equal access for anyone who wants it. Luckily for us, none of these are things we have to worry about, since we did not end up with a usable product, and while the learning we did is valuable to us, we didn't learn anything that isn't already known to someone.\n"
    ]
   },
   {
