--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -457,7 +457,7 @@
    "metadata": {},
    "source": [
     "### Subsection 2\n",
-    "As for the NN, we have to convey the information that is related to decide which tile to discard. We include below information to it;the number of melds in the player's hand, the number of pairs in the player's hand, and the number of discarded tiles which is same as the tile the player just has drawn. We convey these feature into NN and help it decide the tile. Below is the code of this field."
+    "As for the NN, we have to convey the information that is related to decide which tile to discard. We include below information to it;the number of melds in the player's hand, the number of pairs in the player's hand, and the number of discarded tiles which is same as the tile the player just has drawn. We convey these feature into NN and help it decide the tile. Below is the code of this field.(the top code is to collect characteristics of player's hand as features and that is conveyed to the bottom code.)"
    ]
   },
   {
@@ -501,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The \"agent\" suggests NN and it could predict the best action　based on the \"state_feature\". "
+    "The \"agent\" suggests NN and it could predict the best action based on the \"state_feature\". "
    ]
   },
   {
@@ -522,7 +522,7 @@
     "player2[mans 1, mans 3, mans 4, mans 5, mans 6, mans 6, mans 7, mans 8, mans 9, pins 1, pins 2, pins 3, pins 4, pins 5, pins 6, pins 8, sticks 2, sticks 3, sticks 6, sticks 8, 發 0, 白 0], <br>\n",
     "player3[mans 2, mans 2, mans 2, mans 3, mans 4, mans 7, mans 9, mans 9, pins 1, pins 3, pins 5, pins 6, pins 8, pins 9, sticks 1, sticks 2, sticks 2, sticks 3, sticks 7, 中 0, 南 0]<br>\n",
     "\n",
-    "From this information we can say that the model doesn't learn properly from the conveyed information. The possible reason is the characteristic we convey to the NN is just a number of melds or pairs. Model has to receive the concrete information like the kinds of tile it has. However in that case the model must need more time to execute, which might be beyond our skill."
+    "From this information we can say that the model doesn't learn properly from the conveyed information. On the theory of Mahjong, we shouldn't keep honors(東、南、西、東、白、發、中) unless we've already had more than one because these are difficult to collect and unable to be used as straight. However player seems to continue keeping these tiles on the contrary to the theory. Though some tiles it collects seems reasonable, overall doesn't seem sensible.  The possible reason of this is the characteristic we convey to the NN is just a number of melds or pairs. That is why model wouldn't be able to recognize which tile forms melds or straight, leading to discard important tiles. Hence model has to receive the concrete information such as the kinds of tile it has. However in that case the model must need more time to execute, which might be beyond our skill."
    ]
   },
   {
