Conclusion rough draft

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -630,7 +630,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Mahjong is a classic four-player game with a large playerbase. The stochastic nature of the game, and the ability to simulate it using a deterministic hidden Markov model, make it ideal for reinforcement learning. Unfortunately, we encountered several roadblocks in our efforts to use Monte Carlo control to train an AI agent, each of which required us to change strategies. We used heuristic methods for choosing when to pick up tiles, then created a simplified problem that did not interact with the complicated pung and chi mechanics; we trained our models on high-level features extracted from the state space, tried to train them on the entire state space, and trained them solely on the action space using a policy that was not dependent on the state space. None of these methods produced a model capable of playing Mahjong even at amateur level, but developing them and analyzing their shortcomings has improved our understanding of the problem and of how to effectively implement reinforcement learning algorithms."
+   ]
   },
   {
    "cell_type": "markdown",
