--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COGS 118B - Final Project"
+    "# COGS 188 - Final Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Link to repository: https://github.com/Vincent-the-swimmer/COGS188_Mahjong-AI"
    ]
   },
   {
