Minor edits to Proposed Solution

--- a/FinalProject_YourGroupNameHere.ipynb
+++ b/FinalProject_YourGroupNameHere.ipynb
@@ -85,11 +85,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Due to the highly stochastic nature of the Mahjong state space, we used Monte Carlo methods with exploring starts. Our initial encoding of the state space consisted of a set of custom `Tile` objects stored in lists: one for each player's hand, one for each player's discard pile, and one for the wall. Agents typically only have access to their own hand and all players' discard piles, but we did consider training an `OracleAgent` that starts with access to the full state space, then training a normal agent to mimic the actions of the oracle - ideally, this would speed up training significantly. We used the deep learning version of Monte Carlo, implemented in PyTorch using `nn.Linear` layers and `nn.ReLU` activations. Because our initial encoding could not be directly fed into our neural network, we experimented with different methods of encoding, eventually deciding on a matrix representation that is permutation-invarient, greatly reducing the size of the state space.  \n",
+    "Due to the highly stochastic nature of the Mahjong state space, we used Monte Carlo methods with exploring starts. Our initial encoding of the state space consisted of a set of custom `Tile` objects stored in lists: one for each player's hand, one for each player's discard pile, and one for the wall. Agents typically only have access to their own hand and all players' discard piles, but we did consider training an `OracleAgent` that starts with access to the full state space, then training a normal agent to mimic the actions of the oracle - ideally, this would speed up training significantly. We used the deep learning version of Monte Carlo, implemented in PyTorch using `nn.Linear` layers and `nn.ReLU` activations. Because our initial encoding could not be directly fed into our neural network, we experimented with different methods of encoding, with a focus on minimizing the size of the state space while still capturing all relevant information.  \n",
     "  \n",
     "There are two parts of Mahjong that an agent needs to learn: when to Pung or Chi, and which tile to discard. Poor performance on either will result in poor performance overall; and since the two decisions will require separate decision-making elements, we decided it would be best to train an agent to a reasonable level of performance on one before forcing it to learn the other as well. This was a more efficient use of our time, as it made it much easier to create a model capable of learning something, and in principle seems likely to accelerate the agent's learning as well. To this end, we used heuristics to determine whether to Pung or Chi, while our agent learned which tile to discard. Namely, our agents will always Pung or Chi if possible.  \n",
     "  \n",
-    "The simplest way of training an agent using Monte Carlo methods would be to give it a positive reward for doing what we want it to do (winning a hand) and a negative reward for failing to do so. However, given the size of the state space and our limited time and computational resources, we decided to start out by also giving the model small rewards based on heuristic functions. We explored two possible heuristics: giving a small negative reward for discarding a tile that can form part of a run or set, and giving a small positive reward for getting a Pung or Chi. These rewards can be summarized below:\n",
+    "The simplest way of training an agent using Monte Carlo methods would be to give it a positive reward for doing what we want it to do (winning a hand) and a negative reward for failing to do so. However, given the size of the state space and our limited time and computational resources, we decided to start out by also giving the model small rewards based on heuristic functions. We explored two possible heuristics: giving a small negative reward for discarding a tile that can form part of a run or set, and giving a small positive reward for getting a Pung or Chi. The rewards for the latter are summarized below:\n",
     "\n",
     "| **Action**        | **Reward** |\n",
     "|-------------------|------------|\n",
@@ -519,7 +519,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
